--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <div class="row">
     <div class="feature-box col-lg-4">
-      <img  class="icon" src="file:///C:/Users/marian/Desktop/ballot-box-with-check_2611.png" alt=""
+      <img  class="icon" src="images/ballot-box-with-check_2611.png" alt=""
       style="height: 105px; width: 105px; margin-bottom:5%;"
       >
     <h3>Easy to use.</h3> 
@@ -84,13 +84,13 @@
   </div>
 
   <div class="feature-box col-lg-4">
-    <img class="icon" src="file:///C:/Users/marian/Desktop/direct-hit_1f3af.png" alt=""
+    <img class="icon" src="images/direct-hit_1f3af.png" alt=""
     style="height: 105px; width: 105px; margin-bottom:5%;">
     <h3>Elite Clientele</h3>
     <p>We have all the dogs, the greatest dogs.</p>
   </div>
     <div class="feature-box col-lg-4">
-      <img  class="icon" src="file:///C:/Users/marian/Desktop/red-heart_2764-fe0f.png" alt=""
+      <img  class="icon" src="images/red-heart_2764-fe0f.png" alt=""
       style="height: 105px; width: 105px; margin-bottom:5%;">
     <h3>Guaranteed to work.</h3>
     <p>Find the love of your dog's life or your money back.</p>
